fixed resize handler not showing

--- a/css/css.css
+++ b/css/css.css
@@ -4,16 +4,15 @@
     font-size: 11px;
 }
 body, html {
-    height: 100%;
     margin: 0;
 }
 html {
+    height: 100%;
     background-color: transparent;
     overflow: hidden;
 }
 
 #container {
-    height: 100%;
     background: rgba(0,0,0,0.4);
     padding: 10px;
     border-radius: 10px;
